# NextJS_Projects

explore-uv/: pyproject.toml
explore-uv/src/explore_uv/: hello.py
smallWebsite/website/: package-lock.json  package.json
smallWebsite/website/src/app/: page.tsx
